static/css/sidebar.css
    .sidebar{
      width: 21rem;
      height: 100vh;
      position: fixed;
      right: 0;
      top: 0;
      box-sizing: border-box;
      z-index: 2;
      background: var(--background);
      border: solid 1px var(--text);
      padding: 1rem 0rem;
      font-family: IBM;
    }

    .title{
      font-family: LCD;
      font-size: 1.8rem;
      font-variant: small-caps;
      font-weight: 200;
      padding: 0.5rem 0rem 1.5rem 0rem;
      text-align: center;
      color: var(--text);
      animation: glow 0.5s infinite alternate;
    }

    .velocity-holder{
      border: var(--border); 
      text-align: center; 
      display: inline-block; 
      width: calc(29.5%); 
      vertical-align: top; 
      color: var(--background); 
      background: var(--text); 
      height: 100%; 
      padding: 1.9rem 20px;
      box-sizing: border-box;
    }

    .scrollable{
      overflow: auto;
      height: calc(100% - 12rem);
      -ms-overflow-style: none;  /* IE and Edge */
      scrollbar-width: none;
    }

    .scrollable::-webkit-scrollbar {
          display: none;
    }

   table{
        border: solid 0.5px var(--text);
        background: var(--background);
        width: 100%;
        color: var(--text);
    }

    td a{
        text-decoration: none;
    }

    td a:hover{
        text-decoration: underline;
    }

    th{
        font-variant: small-caps;
        font-size: 1.2em;
        padding: 10px 20px 12px 20px;
        color: var(--background);
        background: var(--text);
    }

    tr:hover{
        background: rgba(245, 158, 0, 0.4);
    }

    td{
        border: solid 0.5px var(--text);
        padding: 10px 20px;
        font-size: inherit;
    }

    .smaller-table td{
        padding: 5px 15px;
    }

        button{
          background: var(--text);
          color: var(--background);
          border: solid 2px darkorange;
          font-family: IBM;
          font-weight: 400;
          font-size: 12px;
          opacity: 1;
          cursor: inherit;
        }

        button:hover{
          opacity: 0.8; 
        }

        #posts-display{
          margin: 1rem 0px 6px 0rem;
          height: 5em;
          background: rgba(245, 158, 0, 0.4);
          color: var(--text);
          padding: 1.2em;
          font-family: LCD;
          line-height: 1.7em;
          font-weight: 800;
          font-size: 12px;
/*          box-shadow: inset 0px 0px 15px var(--background);*/
          letter-spacing: 0.5px;
          overflow: auto;
          border: solid 1px var(--text);
          -ms-overflow-style: none;  /* IE and Edge */
          scrollbar-width: none;
          }

        #posts-display::-webkit-scrollbar {
            display: none;
          }

        #posts-display a{
          color: var(--text);
          text-decoration: none;
          animation: glow 2s infinite alternate;
        }

        @keyframes glow {
            to {
                text-shadow: 0 0 12px var(--text);
            }
        }

        #posts-display a:hover{
          text-shadow: 0px 0px 1px var(--text);
        }

        .posts-display-button{
          padding: 6px 5px;
          width: calc(33.3%);
        }

        .clock{
            width: 100%;
            text-align: center;
            padding: 1em 0em;
        }

        .bottom{
            position: absolute;
            bottom: 0px;
            width: 100%;
        }


        .switch {
          position: relative;
          display: inline-block;
          width: calc(100% - 3rem);
          margin: 2em 1.5rem 1.3em 1.5em;
          height: 3rem;
        }

        .switch input { 
          opacity: 0;
          width: 0;
          height: 0;
        }

        .toggle {
          position: absolute;
          cursor: pointer;
          top: 0;
          left: 0;
          right: 0;
          bottom: 0;
          background-color: rgba(245, 158, 0, 0.4);
          color: var(--background);
        }

        .toggle:before {
          position: absolute;
          content: "MODE";
          font-family: IBM;
          height: calc(100% - 8px);
          width: 50%;
          left: 4px;
          bottom: 4px;
          background-color: var(--text);
          -webkit-transition: transform ease .4s;
          transition: transform ease .4;
          line-height: 2.5rem;
          text-align: center;
        }

        input:checked + .toggle {
          background-color: rgba(245, 158, 0, 0.4);

        }

        input:focus + .toggle {
          box-shadow: 0 0 1px #2196F3;
        }

        input:checked + .toggle:before {
          -webkit-transform: translateX(calc(100% - 8px));
          -ms-transform: translateX(calc(100% - 8px));
          transform: translateX(calc(100% - 8px));
        }

        .bar{
            position: relative;
        }

        .bar:hover .tooltip{
            opacity: 1;
            transition: opacity 0.5s ease;
            visibility: visible;
        }

        .tooltip{
            position: absolute;
            opacity: 1;
            background: var(--background);
            border: solid 1px var(--text);
            padding: 5px;
            font-size: 11px;
            font-weight: 200;
            margin-left: 50%;
            margin-top: -1.5rem;
            opacity: 0;
            z-index: 2;
            width: fit-content;
            min-width: 5rem;
            max-width: 10rem;
            visibility: hidden;
        }

        .notes{
          width: calc(100% - 3rem);
          font-family: IBM;
          color: var(--text);
          font-weight: 800;
          margin: 0rem 1.5rem;
          padding-bottom: 4rem;
        }

        .subtitle{
          font-family: Inter;
          font-weight: 400;
          font-size: 0.75rem;
          margin-top: 0.5rem;
        }

        .holder{
          padding: 4rem;
          width: calc(100% - 29rem);
        }

        .graph{
          height: fit-content;
          border: solid 1px var(--text);
          background: rgba(245, 158, 0, 0.4);
          background-image:
                repeating-linear-gradient(rgba(245, 158, 0, 0.4) 0 1px, transparent 1px 100%),
                repeating-linear-gradient(90deg, rgba(245, 158, 0, 0.4) 0 1px, transparent 1px 100%);
          background-size: 21px 21px;
          padding: 0rem 0.3rem;
        }

        .graph h3{
            text-align: right;
            padding: 0.5rem 1rem 0rem 1rem;
            margin: 0px;
        }

